grafana/grafana_service.yml
kind: Service
apiVersion: v1
metadata:
  name: external-service-grafana
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
