grafana/grafana_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cattle-monitoring-system
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: rancher-grafana
spec:
  tls:
    - hosts:
        - grafana.lab.qstetten.de
      secretName: grafana-cert
  rules:
    - host: "grafana.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher-monitoring-grafana
                port:
                  number: 80
