grafana/rancher_grafana_ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: external-service-grafana-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: external-service-grafana-ui
subsets:
  - addresses:
      - ip: 192.168.178.50
    ports:
      - port: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: grafana
spec:
  tls:
    - hosts:
        - grafana.lab.qstetten.de
      secretName: grafana-cert
  rules:
    - host: "grafana.lab.qstetten.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-service-grafana-ui
                port:
                  number: 80
